# MovieCatalog

./: .gitignore  CMakeLists.txt  MovieCatalog.sln  MovieCatalog.vcxproj  MovieCatalog.vcxproj.filters  README.md
MoviesCatalogs/: Backgrounds.cpp  Backgrounds.h  CMakeLists.txt  CMovies.cpp  CMovies.h  CMovies_validators.cpp  CMovies_validators.h  CStorage.cpp  CStorage.h  CanvasCtrl.cpp  CanvasCtrl.h  CategoryBox.cpp  CategoryBox.h  Compact.cpp  Compact.h  CompactEvent.cpp  CompactEvent.h  CompactThread.cpp  CompactThread.h  DCountry.cpp  DCountry.h  DGroup.cpp  DGroup.h  DGroup_validators.cpp  DGroup_validators.h  DMovies.cpp  DMovies.h  DStorage.cpp  DStorage.h  Defines.h  DlgBaseFilter.cpp  DlgBaseFilter.h  DlgDate.cpp  DlgDate.h  DlgFilter.cpp  DlgFilter.h  DlgFind.cpp  DlgFind.h  DlgMoviesFilter.cpp  DlgMoviesFilter.h  (+115 more)
MoviesCatalogs/bitmaps/: Backgrounds.rc2  Backgrounds_Current.rc2  MoviesCatalog.xpm  Sorting.rc2  Sorting.xpms  Table.xpm  ToolbarExtra.rc2  ToolbarExtra.xpms
cmake/: FindGTK3.cmake
lkControls/: CMakeLists.txt  Form.xpms  gtk2-compat.h  lkBoxInit.cpp  lkBoxInit.h  lkCanvas.cpp  lkCanvas.h  lkChkImgListbox.cpp  lkChkImgListbox.h  lkClientData.cpp  lkClientData.h  lkColour.cpp  lkColour.h  lkConfigTools.cpp  lkConfigTools.h  lkCtrlData.cpp  lkCtrlData.h  lkDialog.cpp  lkDialog.h  lkDialogEx.cpp  lkDialogEx.h  lkDocument.cpp  lkDocument.h  lkFileConfig.cpp  lkFileConfig.h  lkFileConfig_private.cpp  lkFileConfig_private.h  lkFileCtrl.cpp  lkFileCtrl.h  lkHyperlinkCtrl.cpp  lkHyperlinkCtrl.h  lkHyperlinkCtrl_private.cpp  lkHyperlinkCtrl_private.h  lkImageBox.cpp  lkImageBox.h  lkImageList.cpp  lkImageList.h  lkImgComboBox.cpp  lkImgComboBox.h  lkItemContainer.cpp  (+27 more)
lkSQLite3/: CMakeLists.txt  internal_Variant.cpp  internal_Variant.h  internal_tools.cpp  internal_tools.h  lkDateTime.cpp  lkDateTime.h  lkSQL3Common.cpp  lkSQL3Common.h  lkSQL3Database.cpp  lkSQL3Database.h  lkSQL3Exception.cpp  lkSQL3Exception.h  lkSQL3Field.cpp  lkSQL3Field.h  lkSQL3FieldData.cpp  lkSQL3FieldData.h  lkSQL3FieldDef.cpp  lkSQL3FieldDef.h  lkSQL3FindTable.cpp  lkSQL3FindTable.h  lkSQL3IndexDef.cpp  lkSQL3IndexDef.h  lkSQL3QuerySet.cpp  lkSQL3QuerySet.h  lkSQL3RecordSet.cpp  lkSQL3RecordSet.h  lkSQL3Statement.cpp  lkSQL3Statement.h  lkSQL3TableDef.cpp  lkSQL3TableDef.h  lkSQL3TableSet.cpp  lkSQL3TableSet.h  lkSQL3TblFieldInit.cpp  lkSQL3TblFieldInit.h  lkSQL3TempDB.cpp  lkSQL3TempDB.h  lkSQL3Validators.cpp  lkSQL3Validators.h  lkSQL3Verify.cpp  (+3 more)
